--- a/frontend/src/app/components/garage-filter/garage-filter.component.html
+++ b/frontend/src/app/components/garage-filter/garage-filter.component.html
@@ -1,14 +1,14 @@
-
-
-<mat-form-field appearance="fill">
-    <mat-label>סינון לפי יישוב</mat-label>
+<div class="filter-center">
+    <mat-form-field appearance="fill">
+      <mat-label>סינון לפי יישוב</mat-label>
   
-    <mat-select [formControl]="cityCtrl">
-      <mat-option value="">הכל</mat-option>
+      <mat-select [formControl]="cityCtrl">
+        <mat-option value="">הכל</mat-option>
   
-      <mat-option *ngFor="let c of cities" [value]="c">
-        {{ c }}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
+        <mat-option *ngFor="let c of cities" [value]="c">
+          {{ c }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
   
