--- a/frontend/src/app/components/garages/garages.component.html
+++ b/frontend/src/app/components/garages/garages.component.html
@@ -3,15 +3,14 @@
     <mat-card-title>ניהול מוסכים</mat-card-title>
     <mat-card-subtitle>בחירה והוספת מוסכים למערכת</mat-card-subtitle>
   </mat-card>
-  <app-garage-filter></app-garage-filter>
 
   <app-garage-filter
   [garages]="savedList"
-  (filterChanged)="onFilterChanged($event)">
-  </app-garage-filter>
+  (filterChanged)="onCityFilterChange($event)">
+</app-garage-filter>
 
     <div class="controls">
-      <mat-form-field style="width: 40%">
+      <mat-form-field style="width: 20%">
         <mat-label>בחר מוסכים להוספה</mat-label>
         <mat-select [formControl]="selCtrl" multiple>
           <mat-option *ngFor="let g of govList" [value]="g">
@@ -22,11 +21,6 @@
   
       <button mat-raised-button color="primary" (click)="onAdd()" [disabled]="loading">הוספה</button>
     </div>
-    <app-garage-filter
-    [garages]="savedList"
-    (filterChanged)="onFilterChanged($event)">
-  </app-garage-filter>
-
   
     <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
 
